{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 53,
  "lineage": "5fd2ebdd-65c5-7103-5676-b5172ec8d03c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fda81ddfaaeb3a7a",
            "arn": "arn:aws:ec2:us-east-1:339713026406:elastic-ip/eipalloc-0fda81ddfaaeb3a7a",
            "association_id": "eipassoc-0152a08afbbdd5b46",
            "domain": "vpc",
            "id": "eipalloc-0fda81ddfaaeb3a7a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03dd9825e2858be7e",
            "private_dns": "ip-10-0-0-98.ec2.internal",
            "private_ip": "10.0.0.98",
            "public_dns": "ec2-18-214-254-7.compute-1.amazonaws.com",
            "public_ip": "18.214.254.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-eip-1",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-eip-1",
              "Owner": "User",
              "Project": "Microservices"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c62162e44f4f081",
            "arn": "arn:aws:ec2:us-east-1:339713026406:elastic-ip/eipalloc-03c62162e44f4f081",
            "association_id": "eipassoc-091bbb6576ef301c4",
            "domain": "vpc",
            "id": "eipalloc-03c62162e44f4f081",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f6b8f0540b2d0ecf",
            "private_dns": "ip-10-0-1-179.ec2.internal",
            "private_ip": "10.0.1.179",
            "public_dns": "ec2-18-235-113-130.compute-1.amazonaws.com",
            "public_ip": "18.235.113.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-eip-2",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-eip-2",
              "Owner": "User",
              "Project": "Microservices"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:internet-gateway/igw-0a2534f21b31b05e1",
            "id": "igw-0a2534f21b31b05e1",
            "owner_id": "339713026406",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-igw",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-igw",
              "Owner": "User",
              "Project": "Microservices"
            },
            "vpc_id": "vpc-008376768145262f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fda81ddfaaeb3a7a",
            "association_id": "eipassoc-0152a08afbbdd5b46",
            "connectivity_type": "public",
            "id": "nat-04fcff030a3987dfd",
            "network_interface_id": "eni-03dd9825e2858be7e",
            "private_ip": "10.0.0.98",
            "public_ip": "18.214.254.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07968eb9157523de9",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-1",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-1",
              "Owner": "User",
              "Project": "Microservices"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c62162e44f4f081",
            "association_id": "eipassoc-091bbb6576ef301c4",
            "connectivity_type": "public",
            "id": "nat-0384372ec9e2f7f8a",
            "network_interface_id": "eni-0f6b8f0540b2d0ecf",
            "private_ip": "10.0.1.179",
            "public_ip": "18.235.113.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067cdcf7b46eba007",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-2",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-nat-2",
              "Owner": "User",
              "Project": "Microservices"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:route-table/rtb-00e3c8dbd2514119f",
            "id": "rtb-00e3c8dbd2514119f",
            "owner_id": "339713026406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04fcff030a3987dfd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-rt-1",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-rt-1",
              "Owner": "User",
              "Project": "Microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-008376768145262f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:route-table/rtb-0e256e19a9f9e409f",
            "id": "rtb-0e256e19a9f9e409f",
            "owner_id": "339713026406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0384372ec9e2f7f8a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-rt-2",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-rt-2",
              "Owner": "User",
              "Project": "Microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-008376768145262f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:route-table/rtb-088e46f10739ae208",
            "id": "rtb-088e46f10739ae208",
            "owner_id": "339713026406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2534f21b31b05e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-public-rt",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-public-rt",
              "Owner": "User",
              "Project": "Microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-008376768145262f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c5a6b397e2c6741",
            "route_table_id": "rtb-00e3c8dbd2514119f",
            "subnet_id": "subnet-0e1254d2dafc8b45d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04944378f3540fdab",
            "route_table_id": "rtb-0e256e19a9f9e409f",
            "subnet_id": "subnet-09dd1b826202f587e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035291bd07e619f60",
            "route_table_id": "rtb-088e46f10739ae208",
            "subnet_id": "subnet-07968eb9157523de9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047988b30a6ec247d",
            "route_table_id": "rtb-088e46f10739ae208",
            "subnet_id": "subnet-067cdcf7b46eba007"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:security-group/sg-09473dc250b73055d",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09473dc250b73055d",
            "ingress": [],
            "name": "microservices-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "339713026406",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-cluster-sg",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-cluster-sg",
              "Owner": "User",
              "Project": "Microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-008376768145262f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:security-group/sg-04ad9e1958d80e730",
            "description": "Security group for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ad9e1958d80e730",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09473dc250b73055d"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09473dc250b73055d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "microservices-cluster-node-sg",
            "name_prefix": "",
            "owner_id": "339713026406",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-node-sg",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-node-sg",
              "Owner": "User",
              "Project": "Microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-008376768145262f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:security-group/sg-0fb8101f8008b3b7e",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb8101f8008b3b7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ad9e1958d80e730"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "microservices-cluster-rds-sg",
            "name_prefix": "",
            "owner_id": "339713026406",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-rds-sg",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-rds-sg",
              "Owner": "User",
              "Project": "Microservices"
            },
            "timeouts": null,
            "vpc_id": "vpc-008376768145262f5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:subnet/subnet-0e1254d2dafc8b45d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1254d2dafc8b45d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713026406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-subnet-1",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-subnet-1",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008376768145262f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:subnet/subnet-09dd1b826202f587e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dd1b826202f587e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713026406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-subnet-2",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-private-subnet-2",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-008376768145262f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:subnet/subnet-07968eb9157523de9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07968eb9157523de9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713026406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-public-subnet-1",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-public-subnet-1",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008376768145262f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:subnet/subnet-067cdcf7b46eba007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067cdcf7b46eba007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713026406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-public-subnet-2",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-public-subnet-2",
              "Owner": "User",
              "Project": "Microservices",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-008376768145262f5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713026406:vpc/vpc-008376768145262f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dea6b56ef123c47e",
            "default_route_table_id": "rtb-05d1508335b313072",
            "default_security_group_id": "sg-06cc8707d1daa0cb6",
            "dhcp_options_id": "dopt-0ac110d5b58604fed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008376768145262f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d1508335b313072",
            "owner_id": "339713026406",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-vpc",
              "Owner": "User",
              "Project": "Microservices"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "microservices-cluster-vpc",
              "Owner": "User",
              "Project": "Microservices"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}